changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Allow monsters to apply items even if they do not know the needed skill.
Requiring the appropriate can_xxx flag is good enough.
Andreas Kirschbaum 2009-06-17

Add shopitems type 'none' matching items with 'type 0'. Prevents some error
messages in the server log.
Andreas Kirschbaum 2009-06-17

Fix monsters applying items generated from treasure lists: do not apply items
before all treasures have been created. Without this fix applying of weapons
did sometimes fail because the needed skill was generated after the weapon.
Andreas Kirschbaum 2009-06-17

Include "hostile" attribute in (pk) messages.
Andreas Kirschbaum 2009-06-16

Fix owner check ("The weapon does not recognize you as its owner.") for bows
and character names which are a prefix of the owner's name.
Andreas Kirschbaum 2009-06-16

Fix incorrect experience calculation when disarming traps/runes as
reported by Alex Tokar.
Andreas Kirschbaum 2009-06-14

Move party related code into party.c module. Fix PARTY_KILL_LOG compile-time
option. Reliably print party join/leave messages. Properly leave the party
when the client connection breaks or when the character logs out. Properly
clean up empty parties.
Andreas Kirschbaum 2009-06-14

Add command parameter validation as reported by Alex Tokar.
Andreas Kirschbaum 2009-06-14

Extract code accessing or manipulating the player's title into player.c
module. Fixes #2017797 (Multiple 'the' displayed in hiscore output). Needs
update to existing 'settings' files: remove all occurrences of "%T" from
who_format and who_wiz_format.
Andreas Kirschbaum 2009-06-14
